added visuals to spec 000 and reclosed
